Add WalletUseCase.balanceOverview
